src/test/resources/tests/typeError/treeSetWithUncomparableElements.qg

init {
    set = treeSet(arrayList(1))
}

run true

input(a,b) true